[tool.poetry]
name = "git-xl"
version = "0.5.0"
description = "Git extension: Makes git-diff work for Excel workbooks (xls* file types)"
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"
oletools = "^0.60"
pyinstaller = {version = "^4.10", python = "<3.11,>=3.6"}
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pypiwin32 = "^223"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
